# drmemory

./: .appveyor.yml  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS  CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  README  README.md  codereview.cmake  lgpl-2.1.txt  license.txt  package.cmake
common/: alloc.c  alloc.h  alloc_private.h  alloc_replace.c  alloc_replace.h  alloc_unopt.c  asm_utils.asm  asm_utils.h  asm_utils_aarch64.asm  asm_utils_arm.asm  callstack.c  callstack.h  crypto.c  crypto.h  heap.c  heap.h  options-docs.c  options-perl.c  per_thread.h  redblack.c  redblack.h  symcache.c  symcache.h  sysnum_linux.h  utils.c  utils.h  utils_shared.c  windefs.h
docs/: CMakeLists.txt  CMake_doxyfile.cmake  CMake_footer.cmake  CMake_rundoxygen.cmake  Doxyfile.in  footer.html  htmlstyle.css
drfuzz/: CMakeLists.txt  drfuzz.c  drfuzz.dox  drfuzz.h  drfuzz_internal.h  drfuzz_mutator.c  drfuzz_mutator.h
drheapstat/: drheapstat.c  drheapstat.h  drheapstat.mxml  drheapstat.pl  drheapstat_frontend.c  optionsx.h  postprocess.pl  staleness.c  staleness.h
drheapstat/visualizer/: CMakeLists.txt  dhvis_color_scheme.h  dhvis_factory.cpp  dhvis_factory.h  dhvis_graph.cpp  dhvis_graph.h  dhvis_options_page.cpp  dhvis_options_page.h  dhvis_snapshot_graph.cpp  dhvis_snapshot_graph.h  dhvis_stale_graph.cpp  dhvis_stale_graph.h  dhvis_structures.cpp  dhvis_structures.h  dhvis_tool.cpp  dhvis_tool.h
drltrace/: CMakeLists.txt  README.md  drltrace.c  drltrace.config  drltrace.cpp  drltrace.dox  drltrace.h  drltrace_frontend.cpp  drltrace_libcalls.cpp  drltrace_linux.config  drltrace_options.cpp  drltrace_options.h  drltrace_win.config
drltrace/scripts/: gen_drltrace_config.py  gen_drlttrace_config.py  headers_parser.py  test_drltrace_out.py
drmemory/: alloc_drmem.c  alloc_drmem.h  annotations.c  annotations.h  annotations_public.c  annotations_public.h  client_per_thread.h  drmemory.c  drmemory.h  drmemory.pl  fastpath.c  fastpath.h  fastpath_arch.h  fastpath_arm.c  fastpath_x86.c  frontend.c  frontend.h  fuzzer.c  fuzzer.h  gdicheck.c  gdicheck.h  handlecheck.c  handlecheck.h  instru.c  instru.h  launcher_android.sh  leak.c  leak.h  memlayout.c  memlayout.h  mksystable.pl  options.c  options.h  optionsx.h  pattern.c  pattern.h  perturb.c  perturb.h  postprocess.pl  readwrite.c  (+35 more)
drstrace/: CMakeLists.txt  drstrace.c  drstrace_frontend.c  drstrace_named_consts.c  drstrace_named_consts.h  drstrace_unit_tests.c  mkenumtable.py  mksymguid.pl  symfetch.c
drsymcache/: CMakeLists.txt  drsymcache.c  drsymcache.dox  drsymcache.h
drsyscall/: CMakeLists.txt  aarch64_syscall_num.h  drsyscall.c  drsyscall.dox  drsyscall.h  drsyscall_driver.c  drsyscall_driver.h  drsyscall_drmf.c  drsyscall_fileparse.c  drsyscall_linux.c  drsyscall_macos.c  drsyscall_numx.h  drsyscall_os.h  drsyscall_usercallx.h  drsyscall_windows.c  drsyscall_windows.h  drsyscall_wingdi.c  linux_defines.h  mksystable.pl  mksystable_macos.pl  pdb2sysfile.cpp  table_defines.h  table_linux.c  table_linux_ioctl.c  table_macos_bsd.c  table_windows_kernel32.c  table_windows_kernel32_libcalls.c  table_windows_ntgdi.c  table_windows_ntoskrnl.c  table_windows_ntoskrnl_infoclass.c  table_windows_ntuser.c  table_windows_ntusercall.c
examples/: leak_example2.c  test_hacktober.c  (+1 more)
tests/: CMakeLists.txt  Makefile  addronly-reg.out  addronly-reg.res  addronly.out  addronly.res  allowlist.cpp  allowlist.res  allowlist_justlib.res  allowlist_lib.cpp  annotations.c  annotations.out  app_suite.out  app_suite.pattern.out  app_suite.pattern.res  asmtest.c  asmtest.out  asmtest.res  asmtest_arm.c  asmtest_x86.c  badjmp.c  badjmp.out  badjmp.res  bitfield.cpp  bitfield.out  bitfield.res  bitfield.strict.out  bitfield.strict.res  blacklist.cpp  blacklist.out  blacklist.res  blocklist.cpp  blocklist.out  blocklist.res  clone.c  clone.out  coverage.out  coverage.res  cs2bug.cpp  cs2bug.heapstat.out  (+225 more)
tests/app_suite/: CMakeLists.txt  app_suite_utils.h  atl_tests_win.cpp  concurrency_win.cpp  crypto_tests_win.cpp  default-suppressions.txt  fibers_win.cpp  float_tests.cpp  fs_tests_posix.cpp  fs_tests_win.cpp  ipc_tests_posix.cpp  iphlpapi_tests_win.cpp  malloc_tests.cpp  malloc_tests_win.cpp  mmap_tests_posix.cpp  namespace_tests_win.cpp  ntalpc_tests_win.cpp  ntexapi_tests_win.cpp  ntgdi_tests_win.cpp  ntuser_tests_win.cpp  ole_tests_win.cpp  os_version_win.cpp  os_version_win.h  pattern_tests.cpp  pdh_win.cpp  power_tests_win.cpp  psapi_tests_win.cpp  registry_tests_win.cpp  seh_tests_win.cpp  shell32_tests_win.cpp  simple_tests.cpp  socket_tests_posix.cpp  socket_tests_win.cpp  stability_tests_win.cpp  stl_tests.cpp  strmem_tests.cpp  tty_tests_posix.cpp  userenv_tests_win.cpp
tests/framework/: CMakeLists.txt  drfuzz_app_empty.c  drfuzz_app_repeat.c  drfuzz_app_segfault.c  drfuzz_client_empty.c  drfuzz_client_mutator.c  drfuzz_client_repeat.c  drfuzz_client_segfault.c  drltrace_test_app.cpp  drsyscall_app.c  drsyscall_client.c  strace_client.c  umbra_app.c  umbra_client_all_scales.c  umbra_client_allscales.c  umbra_client_consistency.c  umbra_client_empty.c  umbra_client_faulty_redzone.c  umbra_client_insert_app_to_shadow.c  umbra_client_scale_up_four_inline.c  umbra_client_scale_up_ptr_inline.c  umbra_client_shadow_mem.c  umbra_test_shared.h  umbra_wild.c
tests/fuzz/: CMakeLists.txt  custom_mutator.c  dictionary.txt  fuzz_buffer.c  fuzz_buffer.cpp  fuzz_buffer.cpp.demangled.out  fuzz_buffer.dictionary.out  fuzz_buffer.fixed_size.out  fuzz_buffer.leak.cpp.out  fuzz_buffer.leak.cpp.res  fuzz_buffer.leak.res  fuzz_buffer.leak_iter.out  fuzz_buffer.leak_iter.res  fuzz_buffer.mutator.o-b-s-3.out  fuzz_buffer.mutator.r-b-s-3.res  fuzz_buffer.mutator.r-n.out  fuzz_buffer.one-input.out  fuzz_buffer.overflow.out  fuzz_buffer.overflow.res  fuzz_buffer.underread.cpp.res  fuzz_buffer.uninitialized.cpp.out  fuzz_buffer.uninitialized.cpp.res  fuzz_corpus.c  fuzz_custom_mutator.out
tests/test_kernel_module/: Makefile  test_kernel_module.c
umbra/: CMakeLists.txt  umbra.c  umbra.dox  umbra.h  umbra_32.c  umbra_64.c  umbra_private.h  umbra_x64.c  umbra_x86.c
(+108 files in other folders)
